style: fix nomination list overlap / replace vh with px

--- a/docs/style.css
+++ b/docs/style.css
@@ -36,6 +36,7 @@ h1 {
 .main {
   position: relative;
   flex-direction: column;
+  margin-bottom: 2rem;
 }
 
 .footer {
@@ -53,14 +54,14 @@ h1 {
 
 .search {
   position: absolute;
-  top: 20vh;
+  top: 10rem;
   height: 50px;
   transition: transform 0.3s ease;
 }
 
 .search.active.expand {
   position: relative;
-  transform: translate(-210%, -260%);
+  transform: translateY(-260%);
 }
 
 .search input {
@@ -74,7 +75,7 @@ h1 {
 }
 
 .search.active input {
-  width: 230px;
+  width: 240px;
 }
 
 .search button {
@@ -112,15 +113,15 @@ h1 {
   margin: 1rem;
   background-color: var(--light-blue);
   border-radius: 5px;
-  width: 220px;
-  height: 350px;
+  width: 230px;
+  height: 360px;
   animation: fade-in 0.5s linear;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
-.card h4 {
-  margin: 0;
+.card h5 {
+  margin: .5rem 0;
 }
 
 .card img {
@@ -136,7 +137,7 @@ h1 {
   border-radius: 5px;
   background-color: var(--light-blue);
   color: #fff;
-  padding: .25rem .75rem;
+  padding: .2rem .5rem;
   margin: 0.25rem;
   transition: background-color 0.3s ease;
 }
@@ -149,23 +150,34 @@ h1 {
   outline: none;
 }
 
+.btn:disabled {
+  background-color: rgba(219, 219, 219, 0.1);
+}
+
 #nominations {
   position: absolute;
-  right: 10px;
+  right: 0;
   top: 0;
   text-align: left;
-  transform: translateY(-35%);
+  transform: translateY(-88px);
 }
 
 .list {
   list-style-type: none;
+  list-style-position: outside;
   text-align: left;
-  transform: translateY(-200%);
+  transform: translateY(-300px);
   transition: transform 0.3s ease;
+  margin: 0 auto;
 }
 
 .list.active {
   transform: translateY(0%);
+}
+
+.list li {
+  text-align: left;
+  z-index: -1;
 }
 
 .banner {
@@ -173,14 +185,14 @@ h1 {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
+  bottom: 0;
   width: 100vw;
-  height: 5vh;
+  height: 80px;
   background-color: rgb(254, 254, 0);
-  color: var(--light-blue);
+  color: var(--dark-blue);
   font-weight: bold;
   font-size: 1.75rem;
-  transform: translateY(-100%);
+  transform: translateY(100%);
   transition: transform 0.3s linear;
   z-index: 5;
 }
